--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
                     <div class="icon-container">
                         <img src="https://www.svgrepo.com/show/20737/certificate-diploma.svg" alt="Medal Icon" class="award-icon"> <!-- Placeholder for award icon -->
                     </div>
-                    <h3 class="honors-awards__title">The American Geophysical Union (AGU) Virtual Poster Competition</h3>
-                    <p class="honors-awards__issuer">Issued by: The American Geophysical Union (AGU)</p>
-                    <p class="honors-awards__date">Issued date: 12th February, 2023</p>
+                    <h3 class="honors-awards__title">Virtual Student Poster Competition</h3>
+                    <p class="honors-awards__issuer">Issued by: National Annual Conference</p>
                     <p class="honors-awards__detail">Winner 2023</p>
                 </div>
                 <!-- Award Item 3 -->
@@ -243,7 +242,7 @@
                 <article class="research-paper__item">
                     <h3 class="research-paper__title">Intelligent Lithology Identification using Well Logs Data with Advanced Ensemble Deep Learning Technique</h3>
                     <div class="research-paper__details">
-                        <p>Presented at: The American Geophysical Union Virtual Poster Competition</p>
+                        <p>Presented at: Virtual Poster Competition</p>
                         <p>Category: Student Poster 2023</p>
                     </div>
                 </article>
