--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div>
                         <h3 class="education__university">Institute of Geology, University of The Punjab, Lahore, Pakistan</h3>
                         <p class="education__degree">BS Applied Geology <span class="education__years">2019-2023</span></p>
-                        <p class="education__details">CGPA: 3.37</p>
+                        <p class="education__details">CGPA: 3.37 / 4.00</p>
                     </div>
                 </div>
                 <!-- Education Item 2 -->
