--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#honors-awards" class="nav__link">Awards</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                    <li class="nav__item"><a href="#honors-awards" class="nav__link">Awards</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
             </div>
@@ -70,13 +70,11 @@
                 </div>
                 <div>
                     <h2 class="about__subtitle">Dilshad Raza</h2>
-                    <p class="about__text">As a passionate Geology student with a strong interest in data science, I bring a unique blend of skills to the intersection of these two dynamic fields. My foundation in geology has endowed me with a keen understanding of Earth's processes, while my expertise in Python programming, cloud computing, and machine learning allow me to analyze and interpret complex geological data in innovative ways. My analytical mindset, coupled with my technical prowess, equips me to leverage technology to solve challenges. Combining these interests, I am poised to make significant contributions to any data-driven geological project.</p>
+                    <p class="about__text">As a passionate Geology student with a strong background and interest in data science, I bring a unique blend of skills to the intersection of these two dynamic fields. My foundation in geology has endowed me with a keen understanding of Earth's processes, while my expertise in Python programming, cloud computing, statistical analysis, and machine learning allow me to analyze and interpret complex data in innovative ways. My analytical mindset, coupled with my technical prowess, equips me to leverage technology to solve challenges. Combining these interests, I am poised to make significant contributions to any data-driven project.</p>
                 </div>
             </div>
         </section>
 
-
-        <!-- Skills -->
         <!-- Skills -->
         <section class="skills section" id="skills">
             <h2 class="section-title">Skills</h2>
@@ -87,27 +85,27 @@
                     <h2 class="skills__subtitle">Geoscience & Geophysics</h2>
                     <div class="skills__data">
                         <i class='bx bx-globe skills__icon'></i>
-                        <span class="skills__name">Integrated Geoscience Applications</span>
+                        <span class="skills__name">Integrated Geosciences Data Analytics</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-water skills__icon'></i>
-                        <span class="skills__name">Advanced Seismic Techniques</span>
+                        <span class="skills__name">Seismic Data Acquisition, Processing and its Quantitative Interpretation</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-globe skills__icon'></i>
-                        <span class="skills__name">GIS Mapping</span>
+                        <span class="skills__name">Well Log Data Processing, Analytics and Petrophysics</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-water skills__icon'></i>
-                        <span class="skills__name">Rock Physics Modelling and Simulations</span>
+                        <span class="skills__name">Rock Physics Modelling and Fluid Flow Simulations</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-landscape skills__icon'></i>
-                        <span class="skills__name">Renewable and Sustainable Resources</span>
+                        <span class="skills__name">Stratigraphy and Structural Interpretation</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-cube-alt skills__icon'></i>
-                        <span class="skills__name">Petrology & Mineral Exploration</span>
+                        <span class="skills__name">GIS Analysis, Geological Mapping and Profiling</span>
                     </div>
                 </div>
                 <!-- Data Science & Analytics Skills -->
@@ -115,27 +113,27 @@
                     <h2 class="skills__subtitle">Data Science & Analytics</h2>
                     <div class="skills__data">
                         <i class='bx bx-code-block skills__icon'></i>
-                        <span class="skills__name">Python & R Programming</span>
+                        <span class="skills__name">Python, R, & JavaScript Programming</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-data skills__icon'></i>
-                        <span class="skills__name">Advanced Data Analytics</span>
+                        <span class="skills__name">Advanced Data Analytics and Visualisations</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-brain skills__icon'></i>
-                        <span class="skills__name">Machine Learning & Deep Learning</span>
+                        <span class="skills__name">Machine Learning & Deep Learning for Predictive Analysis and Modelling</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-cloud skills__icon'></i>
-                        <span class="skills__name">Cloud Solutions (AWS, Azure, GCP)</span>
+                        <span class="skills__name">Scientific Computing and Algorithm Design</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-chart skills__icon'></i>
-                        <span class="skills__name">Statistical & Predictive Modelling</span>
+                        <span class="skills__name">Statistical Data Mining, Pattern Recognition and Analytics</span>
                     </div>
                     <div class="skills__data">
                         <i class='bx bx-code-block skills__icon'></i>
-                        <span class="skills__name">SQL Databases</span>
+                        <span class="skills__name">SQL Databases Queries</span>
                     </div>
                 </div>
             </div>
@@ -244,6 +242,11 @@
                         <img src="assets/img/Data-Science-with-Python.jpg" alt="Data-Science-with-Python">
                     </a>
                 </div>
+                <div class="work__img">
+                    <a href="https://github.com/dilshad-geol/SatelliteImageryAnalytics" target="_blank">
+                        <img src="assets/img/Data-Science-Tutorial-on-Satellite-Imagery-Analysis.webp" alt="Satellite Imagery Analytics with Python">
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -259,6 +262,7 @@
                         <h3 class="education__university">Institute of Geology, University of The Punjab, Lahore, Pakistan</h3>
                         <p class="education__degree">BS Applied Geology <span class="education__years">2019-2023</span></p>
                         <p class="education__details">CGPA: 3.37 / 4.00</p>
+                        <p class="education__details">Thesis: Applications of Data Science and Machine Learning in Subsurface Geosiences.</p>
                     </div>
                 </div>
                 <!-- Education Item 2 -->
